@@ -1,3 +1,6 @@
+2012-08-12 Christian Stith <chstith@ncsu.edu>
+	* power_law_fitting_fabry.m: added. implements Fabry's adaptation of the power law model.
+
 2011-06-30  Jeremy Cribb <jcribb@email.unc.edu>
 	* carreau_chhabra_fit.m:  removed 'ShowStatusWindow' parameter.  It was deprecated in a previous version of Matlab and now throws errors.
 	* cross_model_fit.m: same.
